@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-11-13T02:03:43Z",
-  "count_outdated" : 269,
-  "uniques_outdated" : 202,
+  "timestamp" : "2025-11-15T01:57:55Z",
+  "count_outdated" : 270,
+  "uniques_outdated" : 203,
   "count" : 272,
   "uniques" : 205,
   "clones" : [
-    {
-      "timestamp": "2025-10-31T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-11-03T00:00:00Z",
       "count": 1,
