@@ -1,3 +1,12 @@
+2025-11-15T01:57:55Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/19382640714 # 809
+* notice: Stats Output Repository: https://github.com/andry81-stats/andry81-devops--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-15
+* notice: last 14d: unq all: 2 2
+* notice: prev accum: outdated-unq outdated-all / unq all: 202 269 / 205 272
+* notice: next accum: outdated-unq outdated-all / unq all: 203 270 / 205 272
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2025-10-31] / []
+
 2025-11-13T02:03:43Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/19318074168 # 807
 * notice: Stats Output Repository: https://github.com/andry81-stats/andry81-devops--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-13
